--- a/ProtoCoin/package.json
+++ b/ProtoCoin/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "",
+    "dev": "npx nodemon ./src/blockchain.ts --watch ./src -e ts",
     "compile": "npx tsc",
     "start": "node ./dist/blockchain.js"
   },
   "author": "rramires",
   "license": "MIT",
   "devDependencies": {
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
 }
