--- a/ProtoCoin/package.json
+++ b/ProtoCoin/package.json
@@ -12,7 +12,10 @@
   "author": "rramires",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^29.5.2",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "typescript": "^5.1.3"
   }
 }
