--- a/ProtoCoin/package.json
+++ b/ProtoCoin/package.json
@@ -12,10 +12,14 @@
   "author": "rramires",
   "license": "MIT",
   "devDependencies": {
+    "@types/crypto-js": "^4.1.1",
     "@types/jest": "^29.5.2",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
+  },
+  "dependencies": {
+    "crypto-js": "^4.1.1"
   }
 }
