--- a/ProtoCoin/package.json
+++ b/ProtoCoin/package.json
@@ -8,7 +8,7 @@
     "dev": "npx nodemon ./src/lib/blockchain.ts --watch ./src -e ts",
     "compile": "npx tsc",
     "start": "node ./dist/lib/blockchain.js",
-    "server": "ts-node ./src/server/server.ts"
+    "app": "ts-node ./src/server/app.ts"
   },
   "author": "rramires",
   "license": "MIT",
@@ -17,7 +17,9 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/morgan": "^1.9.4",
+    "@types/supertest": "^2.0.12",
     "jest": "^29.5.0",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
