--- a/ProtoCoin/package.json
+++ b/ProtoCoin/package.json
@@ -8,11 +8,13 @@
     "dev": "npx nodemon ./src/lib/blockchain.ts --watch ./src -e ts",
     "compile": "npx tsc",
     "start": "node ./dist/lib/blockchain.js",
-    "app": "ts-node ./src/app.ts"
+    "app": "ts-node ./src/app.ts",
+    "miner": "ts-node ./src/client/miner.ts"
   },
   "author": "rramires",
   "license": "MIT",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/crypto-js": "^4.1.1",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
@@ -25,6 +27,7 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "crypto-js": "^4.1.1",
     "express": "^4.18.2",
     "morgan": "^1.10.0"
