--- a/ProtoCoin/package.json
+++ b/ProtoCoin/package.json
@@ -8,7 +8,7 @@
     "dev": "npx nodemon ./src/lib/blockchain.ts --watch ./src -e ts",
     "compile": "npx tsc",
     "start": "node ./dist/lib/blockchain.js",
-    "app": "ts-node ./src/app.ts",
+    "proto": "ts-node ./src/protocoin.ts",
     "miner": "ts-node ./src/client/miner.ts"
   },
   "author": "rramires",
@@ -29,6 +29,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "crypto-js": "^4.1.1",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "morgan": "^1.10.0"
   }
