--- a/ProtoCoin/package.json
+++ b/ProtoCoin/package.json
@@ -8,7 +8,7 @@
     "dev": "npx nodemon ./src/lib/blockchain.ts --watch ./src -e ts",
     "compile": "npx tsc",
     "start": "node ./dist/lib/blockchain.js",
-    "proto": "ts-node ./src/protocoin.ts",
+    "core": "ts-node ./src/protocoin.ts",
     "miner": "ts-node ./src/client/miner.ts"
   },
   "author": "rramires",
