--- a/ProtoCoin/package.json
+++ b/ProtoCoin/package.json
@@ -9,7 +9,8 @@
     "compile": "npx tsc",
     "start": "node ./dist/lib/blockchain.js",
     "core": "ts-node ./src/protocoin.ts",
-    "miner": "ts-node ./src/client/miner.ts"
+    "miner": "ts-node ./src/client/miner.ts",
+    "wallet": "ts-node ./src/client/wallet.ts"
   },
   "author": "rramires",
   "license": "MIT",
@@ -30,7 +31,9 @@
     "axios": "^1.4.0",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.3.1",
+    "ecpair": "^2.1.0",
     "express": "^4.18.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "tiny-secp256k1": "^2.2.3"
   }
 }
