--- a/BookDatabase/package.json
+++ b/BookDatabase/package.json
@@ -2,5 +2,8 @@
   "dependencies": {
     "@truffle/hdwallet-provider": "^2.1.14",
     "dotenv": "^16.3.1"
+  },
+  "devDependencies": {
+    "truffle-plugin-verify": "^0.6.5"
   }
 }
