ProtoToken OpenZeppelin add BSC publish

--- a/ProtoTokenOz/.env.example
+++ b/ProtoTokenOz/.env.example
@@ -4,5 +4,11 @@ SECRET=
 # URL Service Provider (Infura goerli URL)
 INFURA_URL=
 
+# BSC Service Provider (Testnet URL)
+BSC_URL=
+
 # EtherScan API Key
 ETHSCAN_API=
+
+# BSCScan API Key
+BSCSCAN_API=
