--- a/ProtoTokenOz/package.json
+++ b/ProtoTokenOz/package.json
@@ -4,8 +4,8 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.3",
+    "@openzeppelin/test-helpers": "^0.5.16",
     "@truffle/hdwallet-provider": "^2.1.15",
-    "bn.js": "^5.2.1",
     "dotenv": "^16.3.1"
   },
   "devDependencies": {
