--- a/BookDatabaseHardHat/package.json
+++ b/BookDatabaseHardHat/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npx hardhat test"
+    "start": "npx hardhat node",
+    "test": "npx hardhat test",
+    "deploy": "npx hardhat run scripts/deploy.ts"
   },
   "keywords": [],
   "author": "",
