--- a/BookDatabaseHardHat/package.json
+++ b/BookDatabaseHardHat/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
+    "@nomiclabs/hardhat-etherscan": "^3.1.8",
     "hardhat": "^2.19.3"
   },
   "dependencies": {
